# forge-template

./: CMakeLists.txt  README.md
include/: RenameMeActiveOrderRiskProcessor.h  RenameMeLevelGenerator.h  RenameMeLevelProcessor.h  RenameMeMarketTimingOrderFilter.h  RenameMeOrderProcessor.h  RenameMeParameterTuner.h  RenameMePendingOrderRiskProcessor.h  RenameMePositionRiskProcessor.h  RenameMeSignalGenerator.h  RenameMeSignalProcessor.h  RenameMeTradeSystem.h
src/: RenameMeActiveOrderRiskProcessor.cpp  RenameMeLevelGenerator.cpp  RenameMeLevelProcessor.cpp  RenameMeMarketTimingOrderFilter.cpp  RenameMeOrderProcessor.cpp  RenameMeParameterTuner.cpp  RenameMePendingOrderRiskProcessor.cpp  RenameMePositionRiskProcessor.cpp  RenameMeSignalGenerator.cpp  RenameMeSignalProcessor.cpp  RenameMeTradeSystem.cpp  main.cpp
